<resources>
    <string name="app_name">365 tracker</string>
    <string name="splash_screen">splash screen</string>
    <string name="live_tracking">LIVE TRACKING</string>
    <string name="track">TRACK</string>
    <string name="fetch">FETCH</string>
    <string name="ok">OK</string>
    <string name="service_number">Enter Service Number</string>
    <string name="location_permission_title">Permission Required!</string>
    <string name="location_permission_message">please grant the permissions to continue using this application</string>

    //CREDIENTIALS
    <string name="GOOGLE_MAPS_API_KEY">AIzaSyCQu5V8WAnzUeP-wtGgfxsVrIWIdImBI4Y</string>
    <string name="distance"></string>
    <string name="duration"></string>
    <string name="city"></string>

    <string name="launch_activity">Launch activity</string>
    <string name="location_unknown">Location unknown</string>
    <string name="location_updates_label">Location Updates</string>

    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="request_location_updates">Request location updates</string>
    <string name="remove_location_updates">Remove location updates</string>

    <string name="location_updated">Location Updated: %1$s</string>
</resources>
