<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="12dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <EditText
            android:id="@+id/etServiceNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="12dp"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/service_number"
            android:inputType="number"></EditText>

        <Button
            android:id="@+id/bTrackVehicle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:hint="@string/track"
            android:inputType="number"
            android:textColorHint="@color/white"></Button>
    </LinearLayout>

    <Button
        android:id="@+id/bFetch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="56dp"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:hint="@string/fetch"
        android:inputType="number"
        android:textColorHint="@color/white"></Button>
</LinearLayout>