<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rlMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/llTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/live_tracking"></TextView>

        <Button
            android:id="@+id/bSwitch"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:layout_weight="2"
            android:text="LIST VIEW"></Button>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llLoc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llTitle"
        android:gravity="center"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:orientation="vertical"
        android:weightSum="3">

        <TextView
            android:id="@+id/distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/distance"
            android:textColor="@color/mapRouteColor"
            android:visibility="gone"></TextView>

        <TextView
            android:id="@+id/duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/distance"
            android:textColor="@color/mapRouteColor"
            android:visibility="gone"></TextView>

        <TextView
            android:id="@+id/city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/city"
            android:textColor="@color/mapRouteColor"></TextView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llmap"
        android:layout_width="match_parent"
        android:layout_height="360dp"
        android:layout_below="@+id/llLoc"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:visibility="visible">

        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvBusStops"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/llLoc"
        android:layout_alignParentBottom="true"
        android:visibility="gone" />


</RelativeLayout>